--- a/goit-js-hw-13-image-finder1/package.json
+++ b/goit-js-hw-13-image-finder1/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server --env.mode development --config ./webpack/config.js",
     "build": "webpack --env.mode production --config ./webpack/config.js",
-    "predeploy": "npm run build -",
-    "deploy": "gh-pages -d build -r https://github.com/VikMelanchenko/goit-js-hw-13-image-finder1"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build -r https://github.com/VikMelanchenko/goit-js-hw-13-image-finder"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,7 @@
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.11.5",
+    "@pnotify/core": "^5.2.0",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
